--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "gera": "webpack -w",
-    "predeploy": "npm run gera"
+    "predeploy": "npm run gera",
+    "deploy": "gh-pages -d dist"
   },
   "author": "",
   "license": "ISC",
